[package]
name = "scirs2-integrate"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Numerical integration module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["integration", "quadrature", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.3" }
# Temporarily removed for publishing
# scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.3" }
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "2.0.12"
rand = "0.9.0"
rand_distr = "0.5.1"
rand_core = "0.9.3"
libc = "0.2"
libm = "0.2"
sobol = "1.0.2"
halton = "0.2.1"

# Optional dependencies
scirs2-autograd = { path = "../scirs2-autograd", version = "0.1.0-alpha.3", optional = true }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
plotters = "0.3"

[[bench]]
name = "integrator_bench"
harness = false

[features]
default = []
simd = ["scirs2-core/simd"]
parallel = ["scirs2-core/parallel", "rayon"]
autodiff = ["scirs2-autograd"]
symplectic = []  # Feature flag for symplectic integrators
parallel_jacobian = ["rayon"]  # Feature flag for parallel Jacobian computation
new_ode = []  # Feature flag for new ODE module structure