[package]
name = "scirs2-integrate"
version = "0.1.0-alpha.5"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Numerical integration module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["integration", "quadrature", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
# Temporarily removed for publishing
# scirs2-linalg = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_core = { workspace = true }
libc = { workspace = true }
libm = { workspace = true }
sobol = { workspace = true }
halton = { workspace = true }
# Note: wide crate is accessed via scirs2-core, not directly

# Optional dependencies
scirs2-autograd = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
plotters = { workspace = true }

[[bench]]
name = "integrator_bench"
harness = false

[[bench]]
name = "scipy_comparison"
harness = false

[features]
default = []
simd = ["scirs2-core/simd"]
parallel = ["scirs2-core/parallel"]
autodiff = ["scirs2-autograd"]
symplectic = []  # Feature flag for symplectic integrators
parallel_jacobian = ["scirs2-core/parallel"]  # Feature flag for parallel Jacobian computation
new_ode = []  # Feature flag for new ODE module structure