[package]
name = "scirs2-interpolate"
version.workspace = true
edition = "2021"
authors = ["SciRS2 Team"]
description = "Interpolation module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["interpolation", "spline", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["simd", "parallel"] }
scirs2-linalg = { workspace = true }
ndarray = { workspace = true }
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true, optional = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
num_cpus = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
plotters = { workspace = true }
rand = { workspace = true }

[features]
# Default features
default = []

# Enable this feature if you have OpenBLAS installed and want to use linear algebra operations
# Provides faster matrix operations, SVD, eigendecompositions, etc.
# Requires OpenBLAS development package (libopenblas-dev or equivalent)
# linalg = ["ndarray-linalg"]  # Commented out since dependency is removed
# Adding linalg as empty feature to support existing cfg conditions
linalg = []

# Enable SIMD optimizations for performance-critical operations
# Provides 2-4x speedup for B-spline evaluation and distance calculations
simd = ["scirs2-core/simd"]

# Enable parallel processing features
parallel = ["scirs2-core/parallel"]
