[package]
name = "scirs2-io"
version.workspace = true
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Input/Output utilities module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["io", "serialization", "data", "scientific", "scipy"]
categories = ["science", "encoding"]

[dependencies]
ndarray = { workspace = true }
scirs2-core = { workspace = true, features = ["parallel"] }
byteorder = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }
flate2 = { workspace = true }
lz4 = { workspace = true }
zstd = { workspace = true }
bzip2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
crc32fast = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
digest = { workspace = true }
data-encoding = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
num-complex = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
netcdf3 = { workspace = true }
kamadak-exif = { workspace = true }
hdf5 = { workspace = true, optional = true }
# rayon = { workspace = true }  # Now use scirs2-core parallel abstractions
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["fs", "io-util", "time", "rt"] }
futures = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
log = { workspace = true, optional = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = ["csv", "compression", "validation"]
csv = []
compression = []
validation = []
hdf5 = ["dep:hdf5"]
async = ["dep:tokio", "dep:futures", "dep:futures-util"]
reqwest = ["dep:reqwest", "dep:log"]
aws-sdk-s3 = []
google-cloud-storage = []
azure-storage-blobs = []
all = ["csv", "compression", "validation", "hdf5", "async", "reqwest", "aws-sdk-s3", "google-cloud-storage", "azure-storage-blobs"]

[[example]]
name = "hdf5_example"
path = "examples/hdf5_example.rs"
required-features = ["hdf5"]

[[example]]
name = "async_io_example"
path = "examples/async_io_example.rs"
required-features = ["async"]

[[example]]
name = "network_cloud_example"
path = "examples/network_cloud_example.rs"
required-features = ["async", "reqwest"]
