[package]
name = "scirs2-linalg"
version.workspace = true
edition = "2021"
authors = ["SciRS2 Team"]
description = "Linear algebra module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["linear-algebra", "matrix", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["linalg", "parallel", "simd", "random"] }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = { workspace = true }
ndarray-rand = { workspace = true }
approx = { workspace = true }
half = { workspace = true }
scirs2-autograd = { workspace = true, optional = true }

[[example]]
name = "test_precision"
path = "examples/test_precision.rs"

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[features]
# Default features use platform-appropriate BLAS backend (configured at workspace level)
default = ["linalg", "simd"]

# BLAS backend features - these delegate to workspace-level platform configuration
accelerate = ["scirs2-core/accelerate"]  # macOS Accelerate framework
openblas-backend = ["scirs2-core/openblas"]  # OpenBLAS (Linux/Windows)
intel-mkl = ["scirs2-core/intel-mkl"]  # Intel MKL
netlib = ["scirs2-core/netlib"]  # Reference Netlib

# Core functionality features
linalg = ["scirs2-core/linalg"] # Linear algebra with BLAS/LAPACK bindings
tensor_contraction = [] # Optional tensor contraction functionality
simd = ["scirs2-core/simd"] # SIMD-accelerated operations
autograd = ["dep:scirs2-autograd"] # Automatic differentiation support
parallel = ["scirs2-core/parallel"] # Parallel processing support
extended-test = [] # For extended precision tests

[[bench]]
name = "linalg_bench"
harness = false
path = "benches/linalg_bench.rs"

[[bench]]
name = "simd_bench"
harness = false
path = "benches/simd_bench.rs"

